--- a/index.css
+++ b/index.css
@@ -13,6 +13,10 @@ a:hover {
   color: #9360d5;
 }
 
+p {
+  font-size: 18px;
+}
+
 center {
   text-align: center;
   }
@@ -22,7 +26,7 @@ center {
 }
 /*Contains everything*/
 .wrapper {
-  width: 1200px;
+  width: 1500px;
   background: #3c435f;
   margin: 0 auto;
   top: 0;
@@ -81,7 +85,7 @@ center {
   }
   
 .sidebar-left, .sidebar-right {
-  width: 200px;
+  width: 250px;
   position: absolute;
   top: 0;
   }
@@ -92,8 +96,9 @@ center {
   }
   
 .main {
-  margin-left: 230px;
-  width: 750px;
+  margin-left: 290px;
+  margin-right: 30px;
+  width: 900px;
   }
   
 .sidebar-right {
@@ -103,7 +108,7 @@ center {
   
 /*Box used for individual sections in the sidebar, center column, etc.*/
 .box {  
-  padding: 5px 7px 5px 7px;
+  padding: 10px 10px 10px 10px;
   background: #000;
   color: #fff;
   border: 3px solid #c7f18b;
@@ -119,7 +124,8 @@ center {
   height: 300px;
   box-shadow: 5px 5px 0px 0px #9360d5;
   background: #000;
-  padding-right:10px;
+  padding:10px;
+  color: #fff;
 }
 
 /*Prevent overflow of large images in main text areas.*/
@@ -254,6 +260,16 @@ h2 {
 }
 
 .stamp:hover {
+  transition: 0.2s;
+  transform: scale(1.5);
+}
+
+.button {
+  width: 88px;
+  height: 31px;
+}
+
+.button:hover {
   transition: 0.2s;
   transform: scale(1.5);
 }
